{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 49,
  "lineage": "9a33657e-98e6-6b73-03aa-529741837b06",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363174885355:internet-gateway/igw-0b9b006a13e0d9ea2",
            "id": "igw-0b9b006a13e0d9ea2",
            "owner_id": "363174885355",
            "region": "eu-north-1",
            "tags": {
              "Name": "trainee_project-igw"
            },
            "tags_all": {
              "Name": "trainee_project-igw",
              "Owner": "Konstantin Busalov"
            },
            "vpc_id": "vpc-0c0f0819e8306b51b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9b006a13e0d9ea2",
            "id": "r-rtb-09c6689089519eda41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-north-1",
            "route_table_id": "rtb-09c6689089519eda4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363174885355",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-north-1",
            "route_table_id": "rtb-09c6689089519eda4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363174885355:route-table/rtb-09c6689089519eda4",
            "id": "rtb-09c6689089519eda4",
            "owner_id": "363174885355",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "trainee_project-rt"
            },
            "tags_all": {
              "Name": "trainee_project-rt",
              "Owner": "Konstantin Busalov"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f0819e8306b51b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363174885355",
            "id": "rtb-09c6689089519eda4",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db5303986a92607e",
            "region": "eu-north-1",
            "route_table_id": "rtb-09c6689089519eda4",
            "subnet_id": "subnet-00d92718e0ff8764a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000b9dfcfad385ba",
            "region": "eu-north-1",
            "route_table_id": "rtb-09c6689089519eda4",
            "subnet_id": "subnet-046943f03f6ebbf78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08af5b73dfbd989e5",
            "region": "eu-north-1",
            "route_table_id": "rtb-09c6689089519eda4",
            "subnet_id": "subnet-06b5dba612a343cc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363174885355:subnet/subnet-00d92718e0ff8764a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d92718e0ff8764a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363174885355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "trainee_project-public-subnet-eu-north-1a"
            },
            "tags_all": {
              "Name": "trainee_project-public-subnet-eu-north-1a",
              "Owner": "Konstantin Busalov"
            },
            "vpc_id": "vpc-0c0f0819e8306b51b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363174885355",
            "id": "subnet-00d92718e0ff8764a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363174885355:subnet/subnet-046943f03f6ebbf78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046943f03f6ebbf78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363174885355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "trainee_project-public-subnet-eu-north-1b"
            },
            "tags_all": {
              "Name": "trainee_project-public-subnet-eu-north-1b",
              "Owner": "Konstantin Busalov"
            },
            "vpc_id": "vpc-0c0f0819e8306b51b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363174885355",
            "id": "subnet-046943f03f6ebbf78",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363174885355:subnet/subnet-06b5dba612a343cc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b5dba612a343cc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363174885355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "trainee_project-public-subnet-eu-north-1c"
            },
            "tags_all": {
              "Name": "trainee_project-public-subnet-eu-north-1c",
              "Owner": "Konstantin Busalov"
            },
            "vpc_id": "vpc-0c0f0819e8306b51b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363174885355",
            "id": "subnet-06b5dba612a343cc2",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363174885355:vpc/vpc-0c0f0819e8306b51b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e8dd76a0d342d11",
            "default_route_table_id": "rtb-0e07474a5b0b3b9ba",
            "default_security_group_id": "sg-0fe58f918f9341787",
            "dhcp_options_id": "dopt-0681e96c7010cad9e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0f0819e8306b51b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e07474a5b0b3b9ba",
            "owner_id": "363174885355",
            "region": "eu-north-1",
            "tags": {
              "Name": "trainee_project-vpc"
            },
            "tags_all": {
              "Name": "trainee_project-vpc",
              "Owner": "Konstantin Busalov"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}